# unirtos-quecduino-sensor-kit-demos

./: README.md
example/01-led/: CMakeLists.txt  README.md  README_EN.md  led_demo.c
example/02-key_interrupt/: CMakeLists.txt  README.md  README_EN.md  button_demo.c
example/03-rgb_led/: CMakeLists.txt  README.md  README_EN.md  unir_rgb_demo.c
example/04-mic/: CMakeLists.txt  README.md  README_EN.md  mic_demo.c
example/05-buzzer/: CMakeLists.txt  README.md  README_EN.md  beep_demo.c
example/06-water_level_detect/: CMakeLists.txt  README.md  README_EN.md  water_demo.c
example/07-magnetic_reed_switch(KY-025)/: CMakeLists.txt  Kconfig  README.md  README_EN.md  adc.c
example/08-Obstacle_Detection_Module(KY-032)/: CMakeLists.txt  README.md  README_EN.md  ky032_demo.c
example/09-Mini_Magnetic(KY-021)/: CMakeLists.txt  README.md  README_EN.md  ky021_demo.c
example/10-photoresistor(KY-018)/: CMakeLists.txt  README.md  README_EN.md  light.c
example/11-flame_detect(KY-026）/: CMakeLists.txt  README.md  README_EN.md  flame_demo.c
example/12-Magic_Aura_Module(KY-027)/: CMakeLists.txt  Kconfig  README.md  README_EN.md  magic_demo.c
example/13-Inclination_switch_module(KY-020)/: CMakeLists.txt  README.md  README_EN.md  ky020_demo.c
example/14-Ultrasonic_module(HC-SR04)/: CMakeLists.txt  README.md  README_EN.md  hcsr04_demo.c
example/15-Human_body_touch_module(KY-036)/: CMakeLists.txt  README.md  README_EN.md  ky036_demo.c
example/16-Digital_tube_module(JY005)/: CMakeLists.txt  README.md  README_EN.md  jy005_demo.c
(+24 files in other folders)
